--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ a {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(50%);
           clip-path: inset(50%);
-  margin: -1px;
+  margin: 0;
 }
 
 .container {
@@ -75,54 +75,57 @@ a {
   width: 1200px;
 }
 
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
 /* Heder Logo */
 .heder {
   border-bottom: 1px solid #ececec;
 }
 
-.heder-logo {
+.heder__container {
+  display: flex;
+  align-items: center;
+}
+
+.bloc {
+  margin-right: 92px;
+}
+
+.bloc__logo {
   display: block;
   padding-top: 24px;
   padding-bottom: 25px;
-  margin-right: 92px;
   color: var(--primary-text-color);
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   line-height: 1.19;
 }
 
-.heder-logo-web {
+.logo__icon {
   color: var(--accent-color);
 }
 
-.site-nav {
+.menu {
   display: flex;
   padding: 0px;
 }
 
-.site-nav .site-item + .site-item {
+.menu .menu__item + .menu__item {
   margin-left: 50px;
   display: block;
 }
-.site-nav .site-item + .site-item:last-child {
+.menu .menu__item + .menu__item:last-child {
   margin-right: 0;
 }
 
-.site-item {
+.menu__item {
   position: relative;
   display: block;
 }
 
-.site-item .site-link-line {
+.menu__item .menu__link__line {
   color: var(--accent-color);
 }
 
-.site-link-line::after {
+.menu__link__line::after {
   display: block;
   position: absolute;
   content: "";
@@ -133,7 +136,7 @@ a {
   border-radius: 2px;
 }
 
-.site-nav .site-link {
+.menu .menu__link {
   display: block;
   color: var(--primary-text-color);
   font-weight: 500;
@@ -144,23 +147,23 @@ a {
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.site-nav .site-link:hover, .site-nav .site-link:focus {
+.menu .menu__link:hover, .menu .menu__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.menu .link.current {
   color: var(--accent-color);
 }
 
 /* Site contacts */
-.site-contacts {
+.contacts {
   margin-left: 308px;
   display: flex;
   align-items: center;
   gap: 30px;
 }
 
-.contacts-link {
+.contacts__link {
   font-weight: 500;
   line-height: 1.14;
   font-size: 14px;
@@ -172,17 +175,17 @@ a {
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-link:hover, .contacts-link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-icon {
+.contacts__icon {
   margin-right: 8px;
   fill: currentColor;
 }
 
-.contackts-use {
+.contackts__use {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -194,18 +197,18 @@ a {
   padding-bottom: 200px;
 }
 
-.overley {
+.hero__overley {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.img.jpeg);
 }
 
-.container .list {
+.hero__container {
   text-align: center;
 }
 
-.hero-list {
+.container__title {
   color: var(--white-color);
   font-weight: 900;
   font-size: 44px;
@@ -220,7 +223,7 @@ a {
   max-width: 696px;
 }
 
-.hero-button {
+.container__button {
   background-color: var(--accent-color);
   color: var(--white-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -237,7 +240,7 @@ a {
   border-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:hover, .hero-button:focus {
+.container__button:hover, .container__button:focus {
   background-color: var(--button-color);
 }
 
@@ -247,26 +250,20 @@ a {
   padding-bottom: 94px;
 }
 
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
-  margin: 0;
+.container__advantage {
+  display: flex;
 }
 
-.advantage-list {
+.container__advantage-list {
   flex-basis: 270px;
   text-align: left;
 }
 
-.advantage-list::before {
+.container__advantage .container__advantage-list + .container__advantage-list {
+  margin-left: 30px;
+}
+
+.container__advantage-list::before {
   display: block;
   content: "";
   height: 120px;
@@ -294,15 +291,7 @@ a {
   background-image: url(../images/astronaut\ .svg);
 }
 
-.advantage-benefits {
-  display: flex;
-}
-
-.advantage-benefits .advantage-list + .advantage-list {
-  margin-left: 30px;
-}
-
-.advantage-title {
+.container__advantage-title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -313,7 +302,7 @@ a {
   margin-bottom: 10px;
 }
 
-.advantage-text {
+.container__advantage-text {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.71;
@@ -323,11 +312,11 @@ a {
 }
 
 /* Work */
-.section-work {
+.work {
   padding-bottom: 94px;
 }
 
-.title-work {
+.container__work-title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -338,7 +327,7 @@ a {
   margin-bottom: 50px;
 }
 
-.work {
+.container__work {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
@@ -346,26 +335,21 @@ a {
   flex-wrap: wrap;
 }
 
-.work-list {
+.container__work-list {
   margin-right: 30px;
 }
-.work-list:nth-child(3n) {
+.container__work-list:nth-child(3n) {
   margin-right: 0;
 }
 
-.work-img {
-  width: 370px;
-  height: 294px;
-}
-
 /* Team */
-.section-team {
+.team {
   background-color: var(--team-color);
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.title-team {
+.team__title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -376,29 +360,29 @@ a {
   margin-bottom: 50px;
 }
 
-.team-list {
+.team__list {
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
   flex-wrap: wrap;
 }
 
-.team-list-hero {
+.team__list-hero {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-hero:not(:last-child) {
+.team__list-hero:not(:last-child) {
   margin-right: 30px;
 }
 
-.team-item {
+.team__item {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-.team-hero {
+.team___hero {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -409,7 +393,7 @@ a {
   text-align: center;
 }
 
-.team-text {
+.team__text {
   color: var(--title-text-color);
   font-size: 16px;
   line-height: 1.19;
@@ -418,14 +402,14 @@ a {
   text-align: center;
 }
 
-.team-soc-list {
+.team__soc-list {
   display: flex;
   justify-content: center;
   margin-top: 16px;
   gap: 10px;
 }
 
-.team-soc-link {
+.team__soc-link {
   width: 44px;
   height: 44px;
   display: flex;
@@ -434,27 +418,25 @@ a {
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-soc-link:hover, .team-soc-link:focus {
+.team__soc-link:hover, .team__soc-link:focus {
   background-color: var(--accent-color);
 }
 
-.team-soc-link:hover .team-soc-icon,
-.team-soc-link:focus .team-soc-icon {
-  fill: white;
-}
-
-.team-soc-icon {
+.team__soc-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.team-soc-link:hover .team__soc-icon, .team-soc-link:focus .team__soc-icon {
+  fill: white;
+}
 
 /* Company */
-.section-company {
+.company {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.company-title {
+.company__title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -465,13 +447,13 @@ a {
   margin-bottom: 50px;
 }
 
-.company-list {
+.company__list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
 
-.company-link {
+.company__link {
   width: 106px;
   height: 60px;
   display: inline-flex;
@@ -483,17 +465,15 @@ a {
   border-radius: 5px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.company-link:hover, .company-link:focus {
+.company__link:hover, .company__link:focus {
   border-color: var(--accent-color);
 }
 
-.company-icon {
+.company__icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.company-link:hover .company-icon,
-.company-link:focus .company-icon {
+.company-link:hover .company__icon, .company-link:focus .company__icon {
   fill: var(--accent-color);
 }
 
@@ -503,11 +483,11 @@ a {
   justify-content: center;
 }
 
-.filter .filter-button + .filter-button {
+.filter .filter__item + .filter__item {
   margin-left: 8px;
 }
 
-.portfolio-button {
+.filter__button {
   background-color: var(--team-color);
   color: var(--primary-text-color);
   font-family: inherit;
@@ -526,7 +506,7 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-button:hover, .portfolio-button:focus {
+.filter__button:hover, .filter__button:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
 }
@@ -539,7 +519,7 @@ a {
 }
 
 /* Gallery */
-.gallery {
+.gallery-section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -557,39 +537,39 @@ a {
   margin: -1px;
 }
 
-/* Work Gallery */
-.work-gallery {
+/* Gallery */
+.gallery {
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
 }
 
-.work-gallery-item {
+.gallery__item {
   margin-right: 30px;
   margin-bottom: 30px;
   text-align: left;
 }
-.work-gallery-item:nth-child(3n) {
+.gallery__item:nth-child(3n) {
   margin-right: 0;
 }
-.work-gallery-item:nth-last-child(-n+3) {
+.gallery__item:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
 
-.work-gallery-link {
+.gallery__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.work-gallery-link:hover, .work-gallery-link:focus {
+.gallery__link:hover, .gallery__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.galery-list {
+.galery__list {
   overflow: hidden;
   position: relative;
 }
 
-.gallery-content {
+.gallery__content {
   position: absolute;
   top: 0;
   left: 0;
@@ -605,11 +585,11 @@ a {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.work-gallery-link:focus .gallery-content, .work-gallery-link:hover .gallery-content {
+.gallery__link:focus .gallery__content, .gallery__link:hover .gallery__content {
   transform: translateY(0);
 }
 
-.gallery-item {
+.gallery__bloc {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
@@ -619,7 +599,7 @@ a {
   border-bottom: 1px solid #ececec;
 }
 
-.work-gallery-title {
+.gallery__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -628,7 +608,7 @@ a {
   margin-bottom: 4px;
 }
 
-.work-gallery-text {
+.gallery__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
@@ -642,7 +622,7 @@ a {
   padding-bottom: 60px;
 }
 
-.footer-container {
+.footer__container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -651,7 +631,7 @@ a {
   gap: 70px;
 }
 
-.contact-blok {
+.footer__contact {
   gap: 83px;
   display: flex;
   margin: 0;
@@ -659,7 +639,7 @@ a {
   align-items: baseline;
 }
 
-.address-blok {
+.footer__address {
   flex-direction: column;
   width: 231px;
   height: 136px;
@@ -667,8 +647,7 @@ a {
   padding: 0;
 }
 
-/* Studio Footer */
-.footer-logo {
+.footer__logo {
   color: var(--white-color);
   font-family: "Raleway", sans-serif;
   font-size: 26px;
@@ -679,7 +658,7 @@ a {
   margin-bottom: 20px;
 }
 
-.footer-logo-web {
+.footer__logo-web {
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   font-size: 26px;
@@ -693,7 +672,7 @@ a {
   display: block;
 }
 
-.footer-address {
+.address__link {
   color: var(--white-color);
   font-style: normal;
   font-size: 14px;
@@ -703,23 +682,22 @@ a {
   padding-bottom: 0;
   display: inline-block;
 }
-.footer-address:hover, .footer-address:focus {
+.address__link:hover, .address__link:focus {
   color: var(--accent-color);
 }
 
-.footer-item {
+.address__item {
   margin-bottom: 9px;
 }
 
-.footer-list .footer-item + .footer-item {
+.address__list .address__item {
   margin-bottom: 9px;
 }
-
-.footer-list .footer-item:last-child {
+.address__list .address__list .address__item:last-child {
   margin-bottom: 0;
 }
 
-.footer-link {
+.address__link-contacts {
   color: var(--footer-text-color);
   font-style: normal;
   font-size: 14px;
@@ -728,18 +706,18 @@ a {
   padding-top: 0;
   padding-bottom: 0;
 }
-.footer-link:hover, .footer-link:focus {
+.address__link-contacts:hover, .address__link-contacts:focus {
   color: var(--accent-color);
 }
 
 /* Soc Footer */
-.soc-blok {
+.soc {
   display: block;
   width: 206px;
   height: 136px;
 }
 
-.soc-footer-title {
+.soc__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -755,19 +733,19 @@ a {
   margin-bottom: 20px;
 }
 
-.soc-footer-list {
+.soc__list {
   display: flex;
   gap: 10px;
   margin: 0;
   padding: 0;
 }
 
-.soc-footer-item {
+.soc__item {
   display: flex;
   border-radius: 50%;
 }
 
-.soc-footer-link {
+.soc__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -777,22 +755,17 @@ a {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.soc-footer-link:hover, .soc-footer-link:focus {
+.soc__link:hover, .soc__link:focus {
   background-color: var(--accent-color);
 }
 
-.soc-footer-icon {
+.soc__icon {
   fill: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Subscription-Footer */
-.subscription-form {
-  display: flex;
-  align-items: center;
-}
-
-.subscription-text {
+.subscription__text {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -802,16 +775,12 @@ a {
   margin-bottom: 20px;
 }
 
-.subscription-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #FFFFFF;
+.subscription__form {
+  display: flex;
+  align-items: center;
 }
 
-.subscription-input {
+.subscription__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -829,7 +798,7 @@ a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.subscription-btn {
+.subscription__btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -850,7 +819,7 @@ a {
   color: #ffffff;
 }
 
-.subscription-svg {
+.subscription__svg {
   width: 24px;
   height: 24px;
   margin-left: 10px;
@@ -887,7 +856,7 @@ a {
   border-radius: 4px;
 }
 
-.modal-close {
+.modal__close {
   position: absolute;
   display: flex;
   align-items: center;
@@ -901,22 +870,22 @@ a {
   background-color: #ffffff;
   cursor: pointer;
 }
-.modal-close:hover, .modal-close:focus {
+.modal__close:hover, .modal__close:focus {
   fill: var(--accent-color);
 }
 
-.modal-close-icon {
+.modal__close-icon {
   position: absolute;
   width: 18px;
   height: 18px;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-icon:hover, .modal-close-icon:focus {
+.modal__close-icon:hover, .modal__close-icon:focus {
   fill: var(--accent-color);
 }
 
-.modal-title {
+.modal__title {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -927,7 +896,22 @@ a {
   margin-bottom: 12px;
 }
 
-.modal-input {
+.modal__label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.modal__wrap {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -936,28 +920,14 @@ a {
   padding-left: 42px;
   outline: transparent;
 }
-.modal-input:focus {
+.modal__input:focus {
   border-color: var(--accent-color);
 }
-.modal-input:focus + .modal-input-icon {
+.modal__input:focus + .modal-input-icon {
   fill: var(--accent-color);
 }
 
-.input-label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: #757575;
-  margin-bottom: 4px;
-}
-
-.input-wrap {
-  position: relative;
-  margin-bottom: 10px;
-}
-
-.modal-input-icon {
+.modal__input-icon {
   position: absolute;
   left: 0%;
   left: 12px;
@@ -965,12 +935,7 @@ a {
   transform: translateY(-50%);
 }
 
-.input-label {
-  display: block;
-  margin-bottom: 4px;
-}
-
-.modal-comment {
+.modal__comment {
   box-sizing: border-box;
   width: 448px;
   height: 120px;
@@ -983,45 +948,42 @@ a {
   padding-right: 0;
   display: block;
 }
-
-.modal-comment::-moz-placeholder {
+.modal__comment::-moz-placeholder {
   font-size: 12px;
   line-height: 1.6;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-comment:-ms-input-placeholder {
+.modal__comment:-ms-input-placeholder {
   font-size: 12px;
   line-height: 1.6;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-comment::placeholder {
+.modal__comment::placeholder {
   font-size: 12px;
   line-height: 1.6;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-comment::-moz-placeholder:focus {
+.modal__comment::-moz-placeholder:focus {
   border-color: var(--accent-color);
 }
-.modal-comment:-ms-input-placeholder:focus {
+.modal__comment:-ms-input-placeholder:focus {
   border-color: var(--accent-color);
 }
-.modal-comment::placeholder:focus {
+.modal__comment::placeholder:focus {
   border-color: var(--accent-color);
 }
 
-.modal-chek {
+.modal__chek {
   justify-content: center;
   display: flex;
   margin-top: 10px;
   margin-bottom: 30px;
 }
 
-.check-text {
+.modal__check-text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -1030,17 +992,7 @@ a {
   align-items: center;
 }
 
-.check-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-  color: #2196f3;
-}
-
-.check-text span {
+.modal__check-text span {
   width: 16px;
   height: 15px;
   border: 2px solid #212121;
@@ -1051,18 +1003,26 @@ a {
   justify-content: center;
   fill: transparent;
 }
-
-.input-check:checked + .check-text span {
+.modal__input-check:checked + .modal__check-text span {
   background-color: var(--accent-color);
   border-color: transparent;
   fill: var(--white-color);
 }
-
-.input-check:focus + .check-text span {
+.modal__input-check:focus + .modal__check-text span {
   border-color: var(--accent-color);
 }
 
-.modal-button {
+.modal__check-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #2196f3;
+}
+
+.modal__button {
   display: block;
   margin: auto;
   cursor: pointer;
@@ -1082,5 +1042,5 @@ a {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
