--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -18,7 +18,7 @@
    padding: 0;
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
-   margin: -1px;
+   margin: 0;
  }
  
  .container {
@@ -28,8 +28,7 @@
    padding-right: 15px;
    width: 1200px;
  }
- 
- .main-nav {
-   display: flex;
-   align-items: center;
- }
+
+
+
+
