--- a/sass/layouts/footer/_footer.scss
+++ b/sass/layouts/footer/_footer.scss
@@ -6,7 +6,7 @@
    padding-bottom: 60px;
  }
  
- .footer-container {
+ .footer__container {
    margin-left: auto;
    margin-right: auto;
    padding-left: 15px;
@@ -15,7 +15,7 @@
    gap: 70px;
  }
  
- .contact-blok {
+ .footer__contact {
    gap: 83px;
    display: flex;
    margin: 0;
@@ -23,13 +23,77 @@
    align-items: baseline;
  }
  
- .address-blok {
+ .footer__address{
    flex-direction: column;
    width: 231px;
    height: 136px;
    margin: 0;
    padding: 0;
  }
+ .footer__logo {
+   color: var(--white-color);
+   font-family: "Raleway", sans-serif;
+   font-size: 26px;
+   line-height: 1.19;
+   display: inline-block;
+   padding-top: 0;
+   padding-bottom: 0;
+   margin-bottom: 20px;
+ }
+ 
+ .footer__logo-web {
+   color: var(--accent-color);
+   font-family: "Raleway", sans-serif;
+   font-size: 26px;
+   line-height: 1.19;
+ }
+ .address {
+   width: 231px;
+   margin: 0;
+   padding: 0;
+   display: block;
+ }
+ 
+ .address__link {
+   color: var(--white-color);
+   font-style: normal;
+   font-size: 14px;
+   line-height: 1.71;
+   letter-spacing: 0.03em;
+   padding-top: 0;
+   padding-bottom: 0;
+   display: inline-block;
+   &:hover,
+   &:focus {
+     color: var(--accent-color);
+   }
+ }
+ 
+ .address__item {
+   margin-bottom: 9px;
+ }
+ 
+ .address__list .address__item {
+   margin-bottom: 9px;
+   .address__list &:last-child {
+      margin-bottom: 0;
+    }
+ }
+ 
+ .address__link-contacts {
+   color: var(--footer-text-color);
+   font-style: normal;
+   font-size: 14px;
+   line-height: 1.71;
+   letter-spacing: 0.03em;
+   padding-top: 0;
+   padding-bottom: 0;
+   &:hover,
+   &:focus {
+     color: var(--accent-color);
+   }
+ }
+ 
  
 
 
