--- a/sass/layouts/footer/_subscription-footer.scss
+++ b/sass/layouts/footer/_subscription-footer.scss
@@ -1,11 +1,6 @@
  /* Subscription-Footer */
  
- .subscription-form {
-   display: flex;
-   align-items: center;
- }
- 
- .subscription-text {
+ .subscription__text {
     font-size: 14px;
  line-height: 1.14;
  letter-spacing: 0.03em;
@@ -14,17 +9,13 @@
  display: block;
  margin-bottom: 20px;
  }
- 
- .subscription-text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
+
+ .subscription__form {
+   display: flex;
+   align-items: center;
  }
- 
- .subscription-input {
+
+ .subscription__input {
    width: 358px;
    height: 50px;
    border: 1px solid rgba(255, 255, 255, 0.3);
@@ -42,7 +33,8 @@
    color: rgba(255, 255, 255, 0.6);
  }
  
- .subscription-btn {
+ 
+ .subscription__btn {
    display: flex;
    align-items: center;
    justify-content: center;
@@ -63,7 +55,7 @@
    color: #ffffff;
  }
  
- .subscription-svg {
+ .subscription__svg {
     width: 24px;
     height: 24px;
     margin-left: 10px;
