--- a/sass/layouts/hero/_hero.scss
+++ b/sass/layouts/hero/_hero.scss
@@ -7,7 +7,7 @@
    padding-bottom: 200px;
  }
  
- .overley {
+ .hero__overley{
    max-width: 1600px;
    margin-left: auto;
    margin-right: auto;
@@ -19,11 +19,11 @@
      url(../images/hero.img.jpeg);
  }
  
- .container .list {
+ .hero__container {
    text-align: center;
  }
  
- .hero-list {
+ .container__title  {
    color: var(--white-color);
    font-weight: 900;
    font-size: 44px;
@@ -38,7 +38,7 @@
    max-width: 696px;
  }
  
- .hero-button {
+ .container__button {
    background-color: var(--accent-color);
    color: var(--white-color);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
