--- a/sass/layouts/header/_site-contacts.scss
+++ b/sass/layouts/header/_site-contacts.scss
@@ -1,13 +1,13 @@
 /* Site contacts */
  
-.site-contacts {
+.contacts {
    margin-left: 308px;
    display: flex;
    align-items: center;
    gap: 30px;
  }
  
- .contacts-link {
+ .contacts__link {
    font-weight: 500;
    line-height: 1.14;
    font-size: 14px;
@@ -25,13 +25,11 @@
    }
  }
  
- .contacts-icon {
+ .contacts__icon {
    margin-right: 8px;
    fill: currentColor;
  }
- 
-
- 
- .contackts-use {
+  
+ .contackts__use {
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
