--- a/sass/layouts/portfolio/_work-gallery.scss
+++ b/sass/layouts/portfolio/_work-gallery.scss
@@ -1,11 +1,11 @@
- /* Work Gallery */
+ /* Gallery */
  
- .work-gallery {
+ .gallery {
    margin-top: 50px;
    display: flex;
    flex-wrap: wrap;
  }
- .work-gallery-item {
+ .gallery__item {
    margin-right: 30px;
    margin-bottom: 30px;
    text-align: left;
@@ -18,7 +18,7 @@
     
  }
 
- .work-gallery-link {
+ .gallery__link {
    display: block;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
    &:hover,
@@ -30,12 +30,12 @@
  
 
  
- .galery-list {
+ .galery__list {
    overflow: hidden;
    position: relative;
  }
  
- .gallery-content {
+ .gallery__content {
    position: absolute;
    top: 0;
    left: 0;
@@ -50,15 +50,14 @@
    background: rgba(33, 150, 243, 0.9);
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   .work-gallery-link:focus &,
-   .work-gallery-link:hover & {
+   .gallery__link:focus &,
+   .gallery__link:hover & {
      transform: translateY(0);
    }
    
  }
  
-
- .gallery-item {
+ .gallery__bloc{
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 24px;
@@ -68,7 +67,7 @@
    border-bottom: 1px solid #ececec;
  }
  
- .work-gallery-title {
+ .gallery__title {
    font-weight: 700;
    font-size: 18px;
    line-height: 2;
@@ -77,7 +76,7 @@
    margin-bottom: 4px;
  }
  
- .work-gallery-text {
+ .gallery__text {
    font-size: 16px;
    line-height: 1.88;
    letter-spacing: 0.03em;
