--- a/sass/layouts/studio/_advantage.scss
+++ b/sass/layouts/studio/_advantage.scss
@@ -4,25 +4,22 @@
    padding-top: 94px;
    padding-bottom: 94px;
  }
- 
- .visually-hidden {
-   position: absolute;
-   white-space: nowrap;
-   width: 1px;
-   height: 1px;
-   overflow: hidden;
-   border: 0;
-   padding: 0;
-   clip: rect(0 0 0 0);
-   clip-path: inset(50%);
-   margin: 0;
+
+ .container__advantage {
+   display: flex;
  }
- .advantage-list {
+ 
+ .container__advantage-list{
    flex-basis: 270px;
    text-align: left;
  }
+
+
+ .container__advantage .container__advantage-list + .container__advantage-list{
+   margin-left: 30px;
+ }
  
- .advantage-list::before {
+ .container__advantage-list::before {
    display: block;
    content: "";
    height: 120px;
@@ -49,15 +46,9 @@
  .icon-astronaut::before {
    background-image: url(../images/astronaut\ .svg);
  }
- .advantage-benefits {
-   display: flex;
- }
+
  
- .advantage-benefits .advantage-list + .advantage-list {
-   margin-left: 30px;
- }
- 
- .advantage-title {
+ .container__advantage-title {
    color: var(--primary-text-color);
    font-weight: 700;
    font-size: 14px;
@@ -68,7 +59,7 @@
    margin-bottom: 10px;
  }
  
- .advantage-text {
+ .container__advantage-text {
    color: var(--title-text-color);
    font-size: 14px;
    line-height: 1.71;
