--- a/sass/layouts/studio/_company.scss
+++ b/sass/layouts/studio/_company.scss
@@ -1,11 +1,11 @@
 /* Company */
  
-.section-company {
+.company {
    padding-top: 94px;
    padding-bottom: 94px;
  }
  
- .company-title {
+ .company__title {
    color: var(--primary-text-color);
    font-weight: 700;
    font-size: 36px;
@@ -16,13 +16,13 @@
    margin-bottom: 50px;
  }
  
- .company-list {
+ .company__list {
    display: flex;
    justify-content: center;
    gap: 30px;
  }
  
- .company-link {
+ .company__link {
    width: 106px;
    height: 60px;
  
@@ -40,7 +40,7 @@
    }
  }
 
- .company-icon {
+ .company__icon {
    fill: #afb1b8;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
    .company-link:hover &,
