--- a/sass/layouts/studio/_company.scss
+++ b/sass/layouts/studio/_company.scss
@@ -43,8 +43,8 @@
  .company__icon {
    fill: #afb1b8;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   .company-link:hover &,
-   .company-link:focus & {
+   .company__link:hover &,
+   .company__link:focus & {
      fill: var(--accent-color);
    }
  }
