--- a/sass/layouts/studio/_team.scss
+++ b/sass/layouts/studio/_team.scss
@@ -40,7 +40,7 @@
    padding-bottom: 30px;
  }
  
- .team___hero {
+ .team__hero {
    color: var(--primary-text-color);
    font-weight: 500;
    font-size: 16px;
@@ -81,14 +81,11 @@
    }
  }
 
- 
-
- 
  .team__soc-icon {
    fill: #afb1b8;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   .team-soc-link:hover &,
-   .team-soc-link:focus &{
+   .team__soc-link:hover &,
+   .team__soc-link:focus & {
      fill: white;
    }
  }
