--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -23,7 +23,7 @@
    text-align: center;
  }
  
- .container__title  {
+ .hero__title  {
    color: var(--white-color);
    font-weight: 900;
    font-size: 44px;
@@ -38,7 +38,7 @@
    max-width: 696px;
  }
  
- .container__button {
+ .hero__button {
    background-color: var(--accent-color);
    color: var(--white-color);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
