--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -52,8 +52,6 @@
 
 .modal__close-icon {
   position: absolute;
-  width: 18px;
-  height: 18px;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -99,7 +97,7 @@
   &:focus {
     border-color: var(--accent-color);
   }
-  &:focus + .modal-input-icon {
+  &:focus + .modal__input-icon {
     fill: var(--accent-color);
   }
 }
@@ -112,9 +110,7 @@
   transform: translateY(-50%);
 }
 
-.input-label {
 
-}
 
 .modal__comment {
   -webkit-box-sizing: border-box;
