--- a/sass/layouts/header/_header-logo.scss
+++ b/sass/layouts/header/_header-logo.scss
@@ -1,30 +1,27 @@
 /* Heder Logo */
 
-.heder {
+
+ .heder {
    border-bottom: 1px solid #ececec;
  }
-
+ 
  .heder__container{
    display: flex;
    align-items: center;
  }
  
- .bloc {
-   margin-right: 92px;
-
-
- }
- 
- .bloc__logo {
+ .heder__logo {
    display: block;
    padding-top: 24px;
    padding-bottom: 25px;
+   margin-right: 92px;
+ 
    color: var(--primary-text-color);
    font-family: "Raleway", sans-serif;
    font-size: 26px;
    line-height: 1.19;
  }
  
- .logo__icon {
+ .heder__logo-icon {
    color: var(--accent-color);
  }
