--- a/sass/layouts/portfolio/_button-gallery.scss
+++ b/sass/layouts/portfolio/_button-gallery.scss
@@ -1,11 +1,11 @@
  /* Button */
  
- .filter {
+ .filter   {
    display: flex;
    justify-content: center;
  }
  
- .filter .filter__item + .filter__item {
+ .filter  .filter__item + .filter__item {
    margin-left: 8px;
  }
  
@@ -27,10 +27,12 @@
    padding-bottom: 6px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
    &:hover,
    &:focus {
      background-color: var(--accent-color);
      color: var(--white-color);
+     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
    }
  }
  .everyone {
