--- a/sass/layouts/studio/_advantage.scss
+++ b/sass/layouts/studio/_advantage.scss
@@ -5,21 +5,21 @@
    padding-bottom: 94px;
  }
 
- .container__advantage {
+ .advantage__list  {
    display: flex;
  }
  
- .container__advantage-list{
+ .advantage__item{
    flex-basis: 270px;
    text-align: left;
  }
 
 
- .container__advantage .container__advantage-list + .container__advantage-list{
+ .advantage .advantage__item + .advantage__item{
    margin-left: 30px;
  }
  
- .container__advantage-list::before {
+ .advantage__item::before {
    display: block;
    content: "";
    height: 120px;
@@ -48,7 +48,7 @@
  }
 
  
- .container__advantage-title {
+ .advantage__title {
    color: var(--primary-text-color);
    font-weight: 700;
    font-size: 14px;
@@ -59,7 +59,7 @@
    margin-bottom: 10px;
  }
  
- .container__advantage-text {
+ .advantage__text {
    color: var(--title-text-color);
    font-size: 14px;
    line-height: 1.71;
