--- a/sass/layouts/studio/_work.scss
+++ b/sass/layouts/studio/_work.scss
@@ -5,7 +5,7 @@
 
  }
 
- .container__work-title {
+ .work__title {
    color: var(--primary-text-color);
    font-weight: 700;
    font-size: 36px;
@@ -16,7 +16,7 @@
    margin-bottom: 50px;
  }
  
- .container__work {
+ .work__list {
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 0;
@@ -25,10 +25,11 @@
  }
  
 
- .container__work-list {
+ .work__item {
    margin-right: 30px;
    &:nth-child(3n) {
       margin-right: 0;
     }
  }
+ 
  
