--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import './layouts/header/site-nav';
 @import './layouts/header/site-contacts';
 // Hero
-@import './layouts/hero/hero';
+@import './layouts/hero';
 
 // Main Studio 
 @import './layouts/studio/advantage';
@@ -32,4 +32,4 @@
 @import './layouts/footer/subscription-footer';
 
 // Modal
-@import './layouts/modal/modal';
+@import './layouts/modal';
